Fixing funky overflow issue.

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -291,6 +291,7 @@ th {
     margin: 0;
   }
   .product-table--admin {
+    margin-top: 0;
     td {
       font-size: 12px;
     }
